Adding most accessed tags query

--- a/dashboards/templates/dashboards/subjects.html
+++ b/dashboards/templates/dashboards/subjects.html
@@ -135,6 +135,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
                 </div>
             </div>
         </div>
+        {{ tags_cloud }}
     </div>
 </div>
 </div>
