--- a/dashboards/templates/dashboards/subjects.html
+++ b/dashboards/templates/dashboards/subjects.html
@@ -73,7 +73,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 {{ block.super }}
 
 {% trans "Analytics" as bread %}
-{% breadcrumb bread 'dashboards:subject' subject.slug %}
+{% breadcrumb bread 'dashboards:view_subject' subject.slug %}
 {% endblock %}
 
 {% block content %}
@@ -152,6 +152,8 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         {# {{ tags_cloud }} #}
     </div>
 </div>
+
+qtd_students: {{ qtd_students }}
 
 <div align="left" style="font-size:22px; color: #878787; padding-top: 0px; ">{% trans 'Auxiliary indicators' %}</div>
 <hr style="height:3px; background-color:#878787; margin-top: 5px;">
